tests/files/parser_tests/should_fail/097.cmdr
//Should fail to parse incomplete scope
{
x = 5;